// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SSOFields/> Editable mode 1`] = `
[
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Page Header Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div
        className="sso-fields__null-image"
      >
        <span
          className="fa fa-5x fa-image"
          style={
            {
              "color": "#DCDCDC",
            }
          }
        />
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_header_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload1"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload1"
                    multiple={false}
                    name="fileUpload1"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
  <div
    className="sso-fields__spacer"
  />,
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Login Page Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div
        className="sso-fields__null-image"
      >
        <span
          className="fa fa-5x fa-image"
          style={
            {
              "color": "#DCDCDC",
            }
          }
        />
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_login_page_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload2"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload2"
                    multiple={false}
                    name="fileUpload2"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
]
`;

exports[`<SSOFields/> No images attached 1`] = `
[
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Page Header Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div
        className="sso-fields__null-image"
      >
        <span
          className="fa fa-5x fa-image"
          style={
            {
              "color": "#DCDCDC",
            }
          }
        />
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_header_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload1"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload1"
                    multiple={false}
                    name="fileUpload1"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
  <div
    className="sso-fields__spacer"
  />,
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Login Page Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div
        className="sso-fields__null-image"
      >
        <span
          className="fa fa-5x fa-image"
          style={
            {
              "color": "#DCDCDC",
            }
          }
        />
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_login_page_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload2"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload2"
                    multiple={false}
                    name="fileUpload2"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
]
`;

exports[`<SSOFields/> View-only mode 1`] = `
[
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Page Header Logo
    </div>
    <div
      className="sso-fields__image-holder--view-only"
    >
      <div
        className="sso-fields__null-image"
      >
        <span
          className="fa fa-5x fa-image"
          style={
            {
              "color": "#DCDCDC",
            }
          }
        />
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sso-fields__spacer"
  />,
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Login Page Logo
    </div>
    <div
      className="sso-fields__image-holder--view-only"
    >
      <div
        className="sso-fields__null-image"
      >
        <span
          className="fa fa-5x fa-image"
          style={
            {
              "color": "#DCDCDC",
            }
          }
        />
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<SSOFields/> With images attached 1`] = `
[
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Page Header Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div>
        <div>
          <img
            alt="Sign in"
            className="sso-fields__image__header-logo"
            onError={[Function]}
            src="imgURLHeader"
          />
        </div>
        <div
          className="sso-fields__delete-img-div"
          onClick={[Function]}
        >
          <span
            className="fa fa-times-circle sso-fields__delete-img clickable sso-fields__delete-img--header-logo"
          />
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_header_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload1"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload1"
                    multiple={false}
                    name="fileUpload1"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
  <div
    className="sso-fields__spacer"
  />,
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Login Page Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div>
        <div>
          <img
            alt="Sign in"
            className="sso-fields__image__page-log"
            onError={[Function]}
            src="imgURLLogin"
          />
        </div>
        <div
          className="sso-fields__delete-img-div"
          onClick={[Function]}
        >
          <span
            className="fa fa-times-circle sso-fields__delete-img clickable sso-fields__delete-img--page-logo"
          />
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_login_page_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload2"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload2"
                    multiple={false}
                    name="fileUpload2"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
]
`;
